kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  name: http
  tls:
    - hosts:
        - example.com
      secretName: example-tls


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  tls:
    - hosts:
        - example.com
      secretName: example-tls
